<resources>
    <string name="app_name">GetMyDriverCard</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="sign_in">Sign-in</string>
    <string name="identity_number">Identity number</string>
    <string name="first_name">First name</string>
    <string name="fathers_name">Father\'s name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t you have an account?</string>
    <string name="make_account">Please make it now.</string>
    <string name="title_request">Reason for which you request driver card:</string>
    <string name="new_card">I don\'t own driver card and I wish to be issue</string>
    <string name="change_card">I own driver card and I wish to change it because of:</string>
    <string name="lost_card">Lost</string>
    <string name="exchange_card">I own driver card issued by another country and I wish to change it to another one issued by Republic of Bulgaria</string>
    <string name="reason">Choose reason</string>
    <string name="renew_card">I wish to renew my driver card</string>
    <string name="withdrawn_card">I wish new driver card because previous was withdrawn</string>
    <array name="spinner_card_change_reason">
        <item>Lost</item>
        <item>Stolen</item>
        <item>Malfunction/Broken</item>
        <item>Address change</item>
        <item>Name change</item>
        <item>Photo change</item>
        <item>Driving license change</item>
    </array>
    <string name="facebook_app_id" translatable="false">326463701266666</string>

    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="next">NEXT</string>
    <string name="date_of_submission">Date of submission</string>
    <string name="application_status">Application status</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="action_settings">Settings</string>
    <string name="preview_description">Image preview will appear here</string>
    <string name="btn_take_picture">Take</string>
    <string name="malfunction_broken_card_message">Malfunction or broken situation the previous card must be returned</string>
    <string name="lost_card_title">Lost situation please specify the date and the place</string>
    <string name="date">Date</string>
    <string name="place">Place</string>
    <string name="photo">Photo</string>
    <string name="upload">Upload</string>
    <string name="driving_license">Driving license</string>
    <string name="country_which_issued_card">Country which issued card</string>
    <string name="tachograph_card_number">Tachograph card number</string>
    <string name="country_which_issued_driving_license">Country which issued\ndriving license</string>
    <string name="driving_license_number">Driving license number</string>
    <string name="date_of_expire">Date of expire</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="identity_card_number">Identity card number</string>
    <string name="issued_by">Issued by</string>
    <string name="issued_on">Issued on</string>
    <string name="pick_date">Pick date</string>
    <string name="categories">Categories</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign-up</string>
    <string name="change_language">Български</string>
    <string name="requests">Requests</string>
    <string name="user">User</string>
    <string name="start_applying">Start applying</string>
</resources>
