<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.step1.Step1Fragment">

    <TextView
        android:id="@+id/tv_title"
        style="@style/BigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_request" />

    <CheckBox
        android:id="@+id/cb_new_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_card"
        style="@style/MediumText"
        android:layout_below="@id/tv_title"/>

    <CheckBox
        android:id="@+id/cb_change_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_card"
        style="@style/MediumText"
        android:layout_below="@id/cb_new_card"/>

    <TextView
        android:id="@+id/tv_reason_to_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reason"
        style="@style/MediumText"
        android:layout_below="@+id/cb_change_card"/>

    <Spinner
        android:id="@+id/spinner_change_card_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lost_card"
        android:layout_below="@+id/cb_change_card"
        android:layout_toEndOf="@+id/tv_reason_to_choose"
        android:entries="@array/spinner_card_change_reason"/>

    <CheckBox
        android:id="@+id/cb_exchange_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exchange_card"
        style="@style/MediumText"
        android:layout_below="@id/tv_reason_to_choose"/>

    <CheckBox
        android:id="@+id/cb_renew_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/renew_card"
        style="@style/MediumText"
        android:layout_below="@id/cb_exchange_card"/>

    <CheckBox
        android:id="@+id/cb_withdrawn_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdrawn_card"
        style="@style/MediumText"
        android:layout_below="@id/cb_renew_card"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_below="@+id/cb_withdrawn_card"
        android:background="@drawable/custom_button"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>