<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.step2.LostStolenMalfunctionCardFragment">

    <TextView
        android:id="@+id/tv_malfunction_broken_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/malfunction_broken_card_message"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_lost_card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MediumText"
        android:text="@string/lost_card_title"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:layout_below="@id/tv_date"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_below="@+id/tv_lost_card_title"
        android:visibility="gone" />

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_lost_card_title"
        android:layout_toEndOf="@id/tv_date"
        android:visibility="gone"/>

</RelativeLayout>