<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.step2.ExchangeCardFragment">

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:paddingTop="10sp"
        android:text="@string/country_which_issued_card"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_country"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_country"
        android:layout_centerInParent="true"
        android:ellipsize="start"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_card_number"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/et_country"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:paddingTop="10sp"
        android:text="@string/tachograph_card_number"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_card_number"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_card_number"
        android:layout_centerInParent="true"
        android:ellipsize="start"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_country_driving_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_card_number"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:paddingTop="10sp"
        android:text="@string/country_which_issued_driving_license"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_country_driving_license"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_country_driving_license"
        android:layout_centerInParent="true"
        android:ellipsize="start"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_driving_license_number"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/et_country_driving_license"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:paddingTop="10sp"
        android:text="@string/driving_license_number"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_driving_license_number"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_driving_license_number"
        android:layout_centerInParent="true"
        android:ellipsize="start"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_driving_license_number"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"
        android:text="@string/next" />

</RelativeLayout>