<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.step2.ChangeCardFragment">

    <TextView
        android:id="@+id/tv_identity_number"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:paddingTop="10sp"
        android:text="@string/identity_number"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/et_identity_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_identity_number"
        android:layout_alignParentTop="true"
        android:hint="@string/identity_number" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:paddingTop="10sp"
        android:layout_below="@+id/tv_identity_number"
        android:text="@string/address"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_address"
        android:layout_below="@+id/tv_identity_number"
        android:hint="@string/address"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:paddingTop="10sp"
        android:layout_below="@+id/tv_identity_number"
        android:text="@string/first_name"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_first_name"
        android:layout_below="@+id/tv_identity_number"
        android:hint="@string/first_name"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_fathers_name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:paddingTop="10sp"
        android:layout_below="@+id/tv_first_name"
        android:text="@string/fathers_name"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/et_fathers_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_fathers_name"
        android:layout_below="@+id/tv_first_name"
        android:hint="@string/fathers_name"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:paddingTop="10sp"
        android:layout_below="@+id/tv_fathers_name"
        android:text="@string/last_name"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_last_name"
        android:layout_below="@+id/tv_fathers_name"
        android:hint="@string/last_name"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_driving_license"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:paddingTop="10sp"
        android:layout_below="@+id/tv_identity_number"
        android:text="@string/driving_license"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_driving_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_driving_license"
        android:layout_below="@+id/tv_identity_number"
        android:hint="@string/driving_license"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>