<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.users.login.LoginFragment">

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_user_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150sp"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/tv_sign_in"
            style="@style/BigText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_user_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_in"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_sign_in"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/username"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_username"
            android:layout_centerHorizontal="true"
            android:hint="@string/password"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_centerHorizontal="true"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:text="@string/no_account"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_go_to_register_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_info"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/make_account"
            android:textColor="@color/colorAccent" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_go_to_register_form" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/google_sign_in_button"/>

    </RelativeLayout>

</FrameLayout>