<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".views.step2.NewCardFragment">

    <TextView
        android:id="@+id/tv_identity_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/identity_number"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:paddingTop="10sp"/>

    <EditText
        android:id="@+id/et_identity_number"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_identity_number"
        android:layout_centerInParent="true"
        android:ellipsize="start"
        android:textSize="16sp"
        android:inputType="phone" />

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_below="@id/et_identity_number"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:paddingTop="10sp"/>

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_first_name"
        android:layout_centerInParent="true"
        android:ellipsize="start"
        android:textSize="16sp"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_fathers_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/et_first_name"
        android:layout_centerHorizontal="true"
        android:text="@string/fathers_name"
        android:textSize="16sp"
        android:paddingTop="10sp"/>

    <EditText
        android:id="@+id/et_fathers_name"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_fathers_name"
        android:layout_centerInParent="true"
        android:ellipsize="start"
        android:textSize="16sp"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/et_fathers_name"
        android:layout_centerHorizontal="true"
        android:text="@string/last_name"
        android:textSize="16sp"
        android:paddingTop="10sp"/>

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_last_name"
        android:layout_centerInParent="true"
        android:ellipsize="start"
        android:textSize="16sp"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/et_last_name"
        android:layout_centerHorizontal="true"
        android:text="@string/phone_number"
        android:textSize="16sp"
        android:paddingTop="10sp"/>

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_phone_number"
        android:layout_centerInParent="true"
        android:ellipsize="start"
        android:textSize="16sp"
        android:inputType="phone" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_phone_number"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"
        android:text="@string/next" />

    <!--<TextView-->
        <!--android:id="@+id/tv_email"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="45dp"-->
        <!--android:layout_marginEnd="10dp"-->
        <!--android:layout_below="@id/tv_phone_number"-->
        <!--android:text="@string/email"-->
        <!--android:textSize="16sp"-->
        <!--android:paddingTop="10sp"/>-->

    <!--<EditText-->
        <!--android:id="@+id/et_email"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/tv_phone_number"-->
        <!--android:layout_toEndOf="@id/tv_email"-->
        <!--android:hint="@string/email"-->
        <!--android:inputType="textEmailAddress" />-->

</RelativeLayout>